# pylight-metrics

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: check_memory.py
src/pylight_metrics/: __init__.py  aggregator.py  core.py
src/pylight_metrics.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_functionality.py  test_stress.py
