[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pylight-metrics"
version = "0.1.1"
description = "A zero-contention, thread-safe metrics aggregator for high-performance Python applications."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Mahesh Chandra", email = "you@example.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Monitoring",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pylight_metrics"]
